remove auth requirements
